--- a/example.html
+++ b/example.html
@@ -10,7 +10,7 @@
     <div id="jLoader"></div>
     <div id="myContent">
         <h1>jLoader v1.1</h1>
-        <img src="images/exampleImage.jpg" width=600 />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Toronto_skyline.jpg" width=600 />
     </div>
 </body>
 
