--- a/example.html
+++ b/example.html
@@ -10,7 +10,8 @@
     <div id="myContent">
         <h1>jLoader v1.1</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Toronto_skyline.jpg" width=600 /><br />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Xantho_poressa_2009_G1.jpg/1280px-Xantho_poressa_2009_G1.jpg" width=600 />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Xantho_poressa_2009_G1.jpg/1280px-Xantho_poressa_2009_G1.jpg" width=600 /><br />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Cocktailtomaten.JPG" width=600 />
     </div>
 </body>
 </html>
